--- a/staff/federico-lacabaratz/templates/feed.html
+++ b/staff/federico-lacabaratz/templates/feed.html
@@ -4,100 +4,190 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Feed</title>
 </head>
 <body>
     <header>
         <div class="header__container">
-            <figure class="header__logoCam">
-                <img src="https://fakeimg.pl/24x24/" alt="">
-            </figure>
-            <figure class="header__logoExplore">
-                <img src="https://fakeimg.pl/24x70/" alt="">
-            </figure>
-        </div>
-        <nav>
-            <ul class="navIcons__container">
-                <li class="navIcons__Explore">
-                    <img src="https://fakeimg.pl/24x24/" alt="">
+            <div class="header__container1">
+                <figure class="header__logoCam">
+                    <img src="https://fakeimg.pl/24x24/?text=Logo" alt="">
+                </figure>
+                <figure class="header__logoInstagram">
+                    <img src="https://fakeimg.pl/72x24/?text=Instagram&font=lobster" alt="">
+                </figure>
+            </div>
+            <ul class="header__container2">
+                <li class="navIcons__explore">
+                    <img src="https://fakeimg.pl/24x24/?text=Compass" alt="">
                 </li>
-                <li class="navIcons__FavsLog">
-                    <img src="https://fakeimg.pl/24x24/" alt="">
+                <li class="navIcons__favsLog">
+                    <img src="https://fakeimg.pl/24x24/?text=Heart" alt="">
                 </li>
-                <li class="navIcons__Profile">
-                    <img src="https://fakeimg.pl/24x24/" alt="">
+                <li class="navIcons__profile">
+                    <img src="https://fakeimg.pl/24x24/?text=MyUser" alt="">
                 </li>
             </ul>
-        </nav>
+        </div>
     </header>
     <main>
         <section class="stories__container">
             <ul class="stories__users">
                 <li class="stories__user1">
-                    <img src="https://fakeimg.pl/64x68/" alt="">
-                    <span>User1</span>
+                    <img src="https://fakeimg.pl/64x68/?text=User1" alt="">
+                    <span><b>User1</b></span>
                 </li>
                 <li class="stories__user2">
-                    <img src="https://fakeimg.pl/64x68/" alt="">
-                    <span>User2</span>
+                    <img src="https://fakeimg.pl/64x68/?text=User2" alt="">
+                    <span><b>User2</b></span>
                 </li>
                 <li class="stories__user3">
-                    <img src="https://fakeimg.pl/64x68/" alt="">
-                    <span>User3</span>
+                    <img src="https://fakeimg.pl/64x68/?text=User3" alt="">
+                    <span><b>User3</b></span>
                 </li>
                 <li class="stories__user4">
-                    <img src="https://fakeimg.pl/64x68/" alt="">
-                    <span>User4</span>
+                    <img src="https://fakeimg.pl/64x68/?text=User4" alt="">
+                    <span><b>User4</b></span>
                 </li>
                 <li class="stories__user5">
-                    <img src="https://fakeimg.pl/64x68/" alt="">
-                    <span>User5</span>
+                    <img src="https://fakeimg.pl/64x68/?text=User5" alt="">
+                    <span><b>User5</b></span>
+                </li>
+                <li class="stories__user6">
+                    <img src="https://fakeimg.pl/64x68/?text=User6" alt="">
+                    <span><b>User6</b></span>
+                </li>
+                <li class="stories__user7">
+                    <img src="https://fakeimg.pl/64x68/?text=User7" alt="">
+                    <span><b>User7</b></span>
+                </li>
+                <li class="stories__user8">
+                    <img src="https://fakeimg.pl/64x68/?text=User8" alt="">
+                    <span><b>User8</b></span>
+                </li>
+                <li class="stories__user9">
+                    <img src="https://fakeimg.pl/64x68/?text=User9" alt="">
+                    <span><b>User9</b></span>
+                </li>
+                <li class="stories__user10">
+                    <img src="https://fakeimg.pl/64x68/?text=User10" alt="">
+                    <span><b>User10</b></span>
                 </li>
             </ul>
         </section>
-        <section class="postUser__container">
-            <figure class="postUserX__userX">
-                <img src="https://fakeimg.pl/120x32/" alt="">
-            </figure>
-            <nav class="postUserX__userXOptions">
-                <img src="" alt="">
-            </nav>
+        <section class="postUserX__container">
+            <div class="postUserX__container2">
+                <figure class="postUserX__userX">
+                    <img src="https://fakeimg.pl/120x32/?text=UserXPhoto+Name" alt="">
+                </figure>
+                <nav class="postUserX__options">
+                    <img src="https://fakeimg.pl/32x32/?text=. . ." alt="">
+                </nav>
+            </div>
             <figure class="postUserX__photo">
-                <img src="https://fakeimg.pl/375x468/" alt="">
+                <img src="https://fakeimg.pl/375x468/?text=Photo&font=lobster" alt="">
             </figure>
         </section>
-        <section class="postMyUser__containter">
-            <ul class="PostMyUser__actions">
+        <section class="postMyUser__container">
+            <ul class="postMyUser__actions">
                 <li>
-                    <nav class="postMyUser__isFav">
-                        <img src="https://fakeimg.pl/24x468/" alt="">
+                    <button type="button" class="postMyUser__isFav--red">
+                        Heart
+                    </button>
+                </li>
+                <li>
+                    <nav class="postMyUser__comment">
+                        <img src="https://fakeimg.pl/24x24/?text=Comment" alt="">
                     </nav>
                 </li>
                 <li>
-                    <nav class="postMyUser__isFav">
-                        <img src="https://fakeimg.pl/24x468/" alt="">
-                    </nav>
-                </li>
-                <li>
-                    <nav class="postMyUser__isFav">
-                        <img src="https://fakeimg.pl/24x468/" alt="">
+                    <nav class="postMyUser__sendPost">
+                        <img src="https://fakeimg.pl/24x24/?text=SendPost" alt="">
                     </nav>
                 </li>
             </ul>
-            <nav class="postMyUser__savePost">
-                <img src="https://fakeimg.pl/24x468/" alt="">
-            </nav>
-            <span class="postUserX__likes"></span>
+            <button type="button" class="postMyUser__savePost--blue">
+                SavePost
+            </button>
         </section>
+        <span class="postMyUser__likes"><b>115 Likes</b></span>
         <section>
-            <form class="PostUserX__comments">
-                <p><b>User2 ha comentado:</b>Blah Blah Blah</p>
+            <form class="postUserX__comments">
+                <p><b>User2 has commented:</b>Blah Blah Blah</p>
             </form>
             <form class="postUserX__myComment">
                 <input type="text" placeholder="Add a comment">
             </form>
+            <form class="postUserX__timeLine">
+                <p>HACE 21 HORAS</p>
+            </form>
+        </section>
+        <section class="postUserX__container">
+            <div class="postUserX__container2">
+                <figure class="postUserX__userX">
+                    <img src="https://fakeimg.pl/120x32/?text=UserXPhoto+Name" alt="">
+                </figure>
+                <nav class="postUserX__options">
+                    <img src="https://fakeimg.pl/32x32/?text=..." alt="">
+                </nav>
+            </div>
+            <figure class="postUserX__photo">
+                <img src="https://fakeimg.pl/375x468/?text=Photo&font=lobster" alt="">
+            </figure>
+        </section>
+        <section class="postMyUser__container">
+            <ul class="postMyUser__actions">
+                <li>
+                    <button type="button" class="postMyUser__isFav--red">
+                        Heart
+                    </button>
+                </li>
+                <li>
+                    <nav class="postMyUser__comment">
+                        <img src="https://fakeimg.pl/24x24/?text=Comment" alt="">
+                    </nav>
+                </li>
+                <li>
+                    <nav class="postMyUser__sendPost">
+                        <img src="https://fakeimg.pl/24x24/?text=SendPost" alt="">
+                    </nav>
+                </li>
+            </ul>
+            <button type="button" class="postMyUser__savePost--blue">
+                SavePost
+            </button>
+        </section>
+        <span class="postMyUser__likes"><b>115 Likes</b></span>
+        <section>
+            <form class="postUserX__comments">
+                <p><b>User2 has commented:</b>Blah Blah Blah</p>
+            </form>
+            <form class="postUserX__myComment">
+                <input type="text" placeholder="Add a comment">
+            </form>
+            <form class="postUserX__timeLine">
+                <p>HACE 21 HORAS</p>
+            </form>
         </section>
     </main>
+    <footer class="postFooter__container">
+        <div class="postFooter__container1">
+            <a>INFORMATION - </a>
+            <a> HELP - </a>
+            <a> PRESS - </a>
+            <a> API - </a>
+            <a> JOBS - </a>
+            <a> PRIVACY - </a>
+            <a> CONDITIONS - </a>
+            <a> DIRECTORY - </a>
+            <a> PROFILES - </a>
+            <a> HASHTAGS - </a>
+            <a> LANGUAGE</a>
+        </div>
+        <div class="postFooter__container2">
+            <Span>@ 2020 INSTAGRAM</Span>
+        </div>
+    </footer>
 </body>
 </html>
