--- a/staff/federico-lacabaratz/templates/instagram/style.css
+++ b/staff/federico-lacabaratz/templates/instagram/style.css
@@ -379,3 +379,12 @@ ul {
     flex-grow: 1;
     width: 100%;
 }
+
+@media only screen and (min-width: 480px) {
+    
+    .postUserX__photo {
+        max-width: 480px;
+        margin: 0 auto;
+        }
+
+}
