--- a/staff/federico-lacabaratz/templates/nike/style.css
+++ b/staff/federico-lacabaratz/templates/nike/style.css
@@ -184,7 +184,7 @@
   width: 100%;
 }
 
-@media screen only and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   main {
     max-width: 768px;
     margin: 0 auto;
