--- a/staff/federico-lacabaratz/templates/nike/style.sass
+++ b/staff/federico-lacabaratz/templates/nike/style.sass
@@ -146,7 +146,7 @@
         width: 100%
 
 
-@media screen only and (min-width: 768px)
+@media only screen and (min-width: 768px)
     main
         max-width: 768px
         margin: 0 auto
